@@ -16,6 +16,10 @@ TMW.CHANGELOG = {
 [==[* The suggestion list now defers its sorting so that input is more responsive.]==],
 [==[* The "Highlight timer edge" setting is back.]==],
 [==[]==],
+[==[====Bug Fixes====]==],
+[==[* Fixed yet another issue with ElvUI's timer texts (they weren't going away when they should have been).]==],
+[==[]==],
+[==[]==],
 [==[===v7.0.3===]==],
 [==[* Re-worked the Instance Type condition to make it more extensible in the future, and also added a few missing instance types to it.]==],
 [==[]==],
